# async-document-workflow

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
backend/: .dockerignore  .eslintrc.js  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20260406_0001_create_document_workflow_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: documents.py  health.py  jobs.py  ws.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  redis.py
backend/app/models/: __init__.py  base.py  document.py  enums.py  extracted_data.py  job.py
backend/app/repositories/: document_repository.py  extracted_data_repository.py  job_repository.py
backend/app/schemas/: common.py  document.py  event.py  extracted_data.py  job.py
backend/app/services/: document_service.py  health_service.py  job_service.py  pipeline_stages.py  processing_service.py  progress_event_service.py  realtime_service.py
backend/app/utils/: exporters.py  file_storage.py
backend/app/workers/: celery_app.py  tasks.py
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20260403120000_init/: migration.sql
backend/scripts/: start-api.sh  start-worker.sh
backend/src/: app.module.ts  main.ts
backend/src/common/enums/: record-type.enum.ts  (+2 more)
backend/src/config/: app.config.ts
backend/test/: dashboard.service.spec.ts  jest.config.ts  users.service.spec.ts
backend/tests/: test_exporters.py
(+88 files in other folders)
