[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async-document-workflow-backend"
version = "0.1.0"
description = "Production-grade async document processing backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=24.1.0,<25.0.0",
  "alembic>=1.14.0,<2.0.0",
  "asyncpg>=0.29.0,<0.30.0",
  "celery[redis]>=5.4.0,<6.0.0",
  "flower>=2.0.1,<3.0.0",
  "fastapi>=0.115.0,<0.116.0",
  "greenlet>=3.1.1,<4.0.0",
  "pydantic>=2.9.2,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.12,<0.0.13",
  "redis[hiredis]>=5.2.0,<6.0.0",
  "sqlalchemy[asyncio]>=2.0.36,<2.1.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2,<0.28.0",
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0",
  "ruff>=0.7.1,<0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
